table no longer wraps, now just need to troubleshoot image sitting on top of table

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 
 table {
+    border-collapse: collapse;
+    position: relative;
+    z-index: -1;
     height: 100vh;
     width: 100vw;
 }
 
 .stars {
-    display: flex;
-    justify-content: flex-start;
-    position: relative;
-    z-index: -1;
+    position: relative; 
 }
 
 tr:nth-of-type(odd) {
